# pandoc-command-simple

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  cabal.project  flake.nix  fourmolu.yaml  pandoc-command-simple.cabal
.git-hooks/: pre-push
src/Text/Pandoc/Command/: Simple.hs
src/Text/Pandoc/Command/Simple/: JSONSchema.hs
tests/: JSONSchemaSpec.hs  PropertySpec.hs  UnitSpec.hs
